--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "plone-snippets",
-  "displayName": "plone-snippets",
-  "version": "0.0.1",
+  "name": "plone-vs-snippets",
+  "displayName": "Plone Snippets",
+  "version": "0.1.0",
   "publisher": "plone",
-  "description": "VS Code Snippets for Plone",
+  "description": "VS Code Snippets for the Python based CMS Plone",
   "icon": "images/plone.png",
   "repository": {
     "type": "git",
@@ -30,11 +30,11 @@
     "snippets": [
       {
         "language": "xml",
-        "path": "./snippets/supermodel.json"
+        "path": "./snippets/xml.json"
       },
       {
         "language": "python",
-        "path": "./snippets/plone.json"
+        "path": "./snippets/python.json"
       }
     ]
   }
