feat: register JS and JSX snippets

--- a/package.json
+++ b/package.json
@@ -35,6 +35,14 @@
 			{
 				"language": "python",
 				"path": "./snippets/python.json"
+			},
+			{
+				"language": "javascript",
+				"path": "./snippets/javascript.json"
+			},
+			{
+				"language": "javascriptreact",
+				"path": "./snippets/javascriptreact.json"
 			}
 		]
 	},
