--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "plone-vs-snippets",
 	"displayName": "Plone Snippets",
-	"version": "1.0.5",
+	"version": "1.0.6",
 	"publisher": "Derico",
 	"description": "VS Code Snippets for the Python based CMS Plone",
 	"icon": "images/plone.png",
@@ -18,6 +18,8 @@
 	"keywords": [
 		"plone",
 		"snippets",
+		"python",
+		"volto",
 		"vs code"
 	],
 	"author": "MrTango",
